fixes for product cards and promo spacing

--- a/dev/css/component/product-card.css
+++ b/dev/css/component/product-card.css
@@ -254,6 +254,11 @@
     text-align: left;
 }
 
+.product-row__tile--img-tile.box-shadow.skinny-promo-tile.product-card__skinny-promo--margin {
+    margin-top: 0;
+    
+}
+
 @media screen and (min-width: 768px) {
 
     .product-card {
@@ -360,6 +365,10 @@
     .shadow{
         left: 0 !important;
     }
+    .product-row__tile--img-tile.box-shadow.skinny-promo-tile.product-card__skinny-promo--margin {
+        margin-top: 0;
+        margin-bottom: 30px;
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -418,5 +427,8 @@
 
     .product-card__promo--margin-bottom {
         margin-bottom: 50px;
+    }
+    .product-row__tile--img-tile.box-shadow.skinny-promo-tile.product-card__skinny-promo--margin {
+        margin-bottom: 40px;
     }
 }
